Infra-temp-1/01-VPC.tf
resource "aws_vpc" "app1" {
  cidr_block = "10.47.0.0/16"

  tags = {
    Name = "app1"
    Service = "application1"
    Owner = "FunkyFingerProductions"
    Planet = "Planet Rock"
  }
}
