Infra-temp-1/03-IGW.tf
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.app1.id

  tags = {
    Name    = "app1_IG"
    Service = "application1"
    Owner   = "FunkyFingerProductions"
    Planet  = "Planet Rock"
  }
}
